==> lizhiok/FPInterro/Libraries/MDK_LIB/RL/CAN/Drivers/CAN_STM32F107.c <==
#include <RTL.h>                      /* RTX kernel functions & defines      */
#include <RTX_CAN.h>                  /* CAN Generic functions & defines     */
#include <stm32f10x_cl.h>             /* STM32F105/7 register definitions    */
#define __CTRL1                 1
#define __CTRL2                 2
#define __FILTER_BANK_MAX      27     /* filter banks 0..27 */
#define CAN_CLK               36000000

static void CAN_set_timing (U32 ctrl, U32 tseg1, U32 tseg2, U32 sjw, U32 brp) {
  CAN_TypeDef *CANx = CAN_CTRL[ctrl-1];

  CANx->BTR &= ~(((          0x03) << 24) | ((            0x07) << 20) | ((            0x0F) << 16) | (          0x3FF));
  CANx->BTR |=  ((((sjw-1) & 0x03) << 24) | (((tseg2-1) & 0x07) << 20) | (((tseg1-1) & 0x0F) << 16) | ((brp-1) & 0x3FF));
}

CAN_ERROR CAN_hw_setup (U32 ctrl)  {

  switch (ctrl) {
    case 1: 
      #if USE_CAN_CTRL1 == 1
        /* Enable clock for CAN1, GPIOD and AFIO */
        RCC->APB1ENR |= (1 << 25);
        RCC->APB2ENR |= (1 <<  5) | (1 <<  0);
        /* CAN1 remap, use PD0, PD1 */
        AFIO->MAPR   |= 0x00006000;
        GPIOD->CRL   &= 0xFFFFFF00;
        GPIOD->CRL   |= 0x000000B8;
        /* Enable CAN1 interrupts */
        NVIC->IP[4]  |= 0x10000000;                  // set priority
        NVIC->IP[5]  |= 0x00000010;                  // set priority
        NVIC->ISER[0] = (1 << 20) | (1 << 19);       // enable interrupt
      #endif
      break;
    case 2: 
      #if USE_CAN_CTRL2 == 1
        /* Enable clock for CAN2, GPIOB and AFIO */
        RCC->APB1ENR |= (1 << 25) | (1 << 26);
        RCC->APB2ENR |= (1 <<  3) | (1 <<  0);
        /* CAN2 remap, use PB5, PB6 */
        AFIO->MAPR   |= 0x00400000;
        GPIOB->CRL   &= 0xF00FFFFF;
        GPIOB->CRL   |= 0x0B800000;
        /* Enable CAN2 interrupts */
        NVIC->IP[15] |= 0x10000000;                  // set priority
        NVIC->IP[16] |= 0x00000010;                  // set priority
        NVIC->ISER[1] = 1U << 31;                    // enable interrupt
        NVIC->ISER[2] = 1 << 0;                      // enable interrupt
      #endif
      break;
    default:
      return CAN_UNEXIST_CTRL_ERROR;
  }

  return CAN_OK;
}

CAN_ERROR CAN_hw_init (U32 ctrl, U32 baudrate)  {
  CAN_TypeDef *CANx = CAN_CTRL[ctrl-1];

  CANx->MCR = (1 << 0);               /* Init mode, with enabled automatic   */
                                      /* retransmission only FIFO 0,         */
                                      /* transmit mailbox 0 used             */
  CANx->IER = ((1 << 1) | (1 << 0));  /* FIFO 0 msg pending,                 */
                                      /* Transmit mbx empty                  */

  if (CAN_hw_set_baudrate(ctrl, baudrate) != CAN_OK)         /* Set baudrate */
    return CAN_BAUDRATE_ERROR;

  return CAN_OK;
}

CAN_ERROR CAN_hw_start (U32 ctrl)  {
  CAN_TypeDef *CANx = CAN_CTRL[ctrl-1];

  CANx->MCR &= ~(1 << 0);             /* normal operating mode, reset INRQ   */
  while (CANx->MSR & (1 << 0));

  return CAN_OK;
}

CAN_ERROR CAN_hw_testmode (U32 ctrl, U32 testmode) {
  CAN_TypeDef *CANx = CAN_CTRL[ctrl-1];

  CANx->BTR &= ~((1U << 31) | (1 << 30)); 
  CANx->BTR |=  (testmode & ((1U << 31) | (1 << 30)));

  return CAN_OK;
}

CAN_ERROR CAN_hw_tx_empty (U32 ctrl)  {
  CAN_TypeDef *CANx = CAN_CTRL[ctrl-1];

  if ((os_sem_wait (wr_sem[ctrl-1], 0) != OS_R_TMO)){ /* If semaphore is free*/
    if ((CANx->TSR & (1 << 26)) != 0) /* Transmit mailbox 0 is empty         */
      return CAN_OK;
    else 
      os_sem_send(wr_sem[ctrl-1]);    /* Return a token back to semaphore    */
  }

  return CAN_TX_BUSY_ERROR;
}

CAN_ERROR CAN_hw_wr (U32 ctrl, CAN_msg *msg)  {
  CAN_TypeDef *CANx = CAN_CTRL[ctrl-1];

  /* Reset TIR register                                                      */
  CANx->sTxMailBox[0].TIR  = (U32)0;                       /* reset TXRQ bit */

  /* Setup the identifier information                                        */
  if (msg->format == STANDARD_FORMAT)  {                   /*    Standard ID */
    CANx->sTxMailBox[0].TIR |= (U32)(msg->id << 21);
  }  else  {                                               /* Extended ID    */
    CANx->sTxMailBox[0].TIR |= (U32)(msg->id <<  3) | (1 << 2);
  }

  /* Setup type information                                                  */
  if (msg->type == REMOTE_FRAME)  {                        /* REMOTE FRAME   */
    CANx->sTxMailBox[0].TIR |= (1 << 1);
  }

  /* Setup data bytes                                                        */
  CANx->sTxMailBox[0].TDLR = (((U32)msg->data[3] << 24) |
                              ((U32)msg->data[2] << 16) |
                              ((U32)msg->data[1] <<  8) |
                              ((U32)msg->data[0])       );
  CANx->sTxMailBox[0].TDHR = (((U32)msg->data[7] << 24) |
                              ((U32)msg->data[6] << 16) |
                              ((U32)msg->data[5] <<  8) |
                              ((U32)msg->data[4])       );

  /* Setup length                                                            */
  CANx->sTxMailBox[0].TDTR &= ~0x0000000F;
  CANx->sTxMailBox[0].TDTR |=  (msg->len & 0x0000000F);

  CANx->IER |= (1 << 0);                           /*  enable  TME interrupt */ 

  /*  transmit message                                                       */
  CANx->sTxMailBox[0].TIR  |=  (1 << 0);                   /*   set TXRQ bit */

  return CAN_OK;
}

static void CAN_hw_rd (U32 ctrl, U32 ch, CAN_msg *msg)  {
  CAN_TypeDef *CANx = CAN_CTRL[ctrl-1];

  /* Read identifier information                                             */
  if ((CANx->sFIFOMailBox[0].RIR & (1 << 2)) == 0) {        /* Standard ID   */
    msg->format = STANDARD_FORMAT;
    msg->id     = 0x000007FFUL & (CANx->sFIFOMailBox[0].RIR >> 21);
  }  else  {                                                /* Extended ID   */
    msg->format = EXTENDED_FORMAT;
    msg->id     = 0x1FFFFFFFUL & (CANx->sFIFOMailBox[0].RIR >> 3);
  }

  /* Read type information                                                   */
  if ((CANx->sFIFOMailBox[0].RIR & (1 << 1)) == 0) {
    msg->type =   DATA_FRAME;                               /* DATA   FRAME  */
  }  else  {
    msg->type = REMOTE_FRAME;                               /* REMOTE FRAME  */
  }

  /* Read length (number of received bytes)                                  */
  msg->len = (U32)0x0000000F & CANx->sFIFOMailBox[0].RDTR;

  /* Read data bytes                                                         */
  msg->data[0] = (U32)0x000000FF & (CANx->sFIFOMailBox[0].RDLR);
  msg->data[1] = (U32)0x000000FF & (CANx->sFIFOMailBox[0].RDLR >> 8);
  msg->data[2] = (U32)0x000000FF & (CANx->sFIFOMailBox[0].RDLR >> 16);
  msg->data[3] = (U32)0x000000FF & (CANx->sFIFOMailBox[0].RDLR >> 24);

  msg->data[4] = (U32)0x000000FF & (CANx->sFIFOMailBox[0].RDHR);
  msg->data[5] = (U32)0x000000FF & (CANx->sFIFOMailBox[0].RDHR >> 8);
  msg->data[6] = (U32)0x000000FF & (CANx->sFIFOMailBox[0].RDHR >> 16);
  msg->data[7] = (U32)0x000000FF & (CANx->sFIFOMailBox[0].RDHR >> 24);
}

CAN_ERROR CAN_hw_rx_object (U32 ctrl, U32 ch, U32 id, U32 object_para)  {
  U16 CAN_filterBnk = 0;
  U16 CAN_filterIdx = 0;
  
  /* find free filter */
  switch (ctrl) {
    case __CTRL1:        /* for CTRL1 we check from 0 .. __FILTER_BANK_MAX - CAN2_filterIdx */
      CAN_filterIdx = (CAN2_filterIdx == 0) ? __FILTER_BANK_MAX : __FILTER_BANK_MAX - CAN2_filterIdx - 1; 

      for (CAN_filterBnk = 0; CAN_filterBnk < CAN_filterIdx; CAN_filterBnk++) {
        if (CAN_hw_rx_object_chk (ctrl, CAN_filterBnk, object_para) == __TRUE) {
          CAN_hw_rx_object_add (ctrl, CAN_filterBnk, id, object_para);
          break;                                    /* stop the loop if we have added the object */
        }
      }
      break;

    case __CTRL2:        /* for CTRL2 we check from __FILTER_BANK_MAX .. [1 | CAN1_filterIdx] */
      CAN_filterIdx = (CAN1_filterIdx == 0) ? 0 : CAN1_filterIdx - 1; 

      for (CAN_filterBnk = __FILTER_BANK_MAX; CAN_filterBnk > CAN_filterIdx; CAN_filterBnk--) {
        if (CAN_hw_rx_object_chk (ctrl, CAN_filterBnk, object_para) == __TRUE) {
          CAN_hw_rx_object_add (ctrl, CAN_filterBnk, id, object_para);
          break;                                    /* stop the loop if we have added the object */
        }
      }
      break;
  }

  if (CAN_filterBnk != CAN_filterIdx)
    return CAN_OK;
  else
    return CAN_OBJECTS_FULL_ERROR;

}
